[package]
name = "tinyq"
version = "0.1.0"
edition = "2021"


[dependencies]
async-stream = "0.3"
bytes = "1"
tokio-stream = "0.1"
tokio = { version = "^1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[[example]]
name = "client"


[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }
